<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_centerInParent="true"
    android:layout_height="match_parent"
    android:background="@color/background_page"
    tools:context="com.NakshatraTechnoHub.HubSched.Ui.StartActivity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="LOGIN HUBSCHED ID"
                android:textColor="#2B2B2B"
                android:textSize="@dimen/_18sdp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="@dimen/_270sdp"
                android:layout_height="@dimen/_42sdp"
                android:layout_marginStart="@dimen/_23sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_23sdp"
                android:hint="Hubsched - ID"
                app:boxBackgroundColor="@android:color/transparent"
                app:boxCornerRadiusTopEnd="@dimen/_11sdp"
                app:boxCornerRadiusTopStart="@dimen/_11sdp"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:textAppearance="@style/TextStyle" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="@dimen/_270sdp"
                android:layout_height="@dimen/_42sdp"
                android:layout_marginStart="@dimen/_23sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_23sdp"
                android:hint="Password"
                app:boxBackgroundColor="@android:color/transparent"
                app:boxCornerRadiusTopEnd="@dimen/_11sdp"
                app:boxCornerRadiusTopStart="@dimen/_11sdp"
                app:hintTextColor="@color/black"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:textAppearance="@style/TextStyle"
                    tools:ignore="TextSizeCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:gravity="end"
                android:layout_width="@dimen/_270sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="Forgot password"
                android:textSize="@dimen/_10sdp"
                tools:ignore="TextSizeCheck" />

            <com.google.android.material.button.MaterialButton

                android:id="@+id/login_btn"
                android:layout_width="@dimen/_270sdp"
                android:layout_height="@dimen/_42sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="LOGIN"
                app:cornerRadius="@dimen/_14sdp" />

            <pl.droidsonroids.gif.GifImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:src="@drawable/login_board_t" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="Contact us "
                    android:textSize="@dimen/_13sdp" />

                <View
                    android:layout_width="@dimen/_270sdp"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="#AAAAAA" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="@dimen/_90sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:backgroundTint="@color/purple_500"
                        app:cardCornerRadius="@dimen/_25sdp"
                        app:cardElevation="0dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:id="@+id/fb_icn"
                                android:layout_width="@dimen/_15sdp"
                                android:layout_height="@dimen/_15sdp"
                                android:layout_centerVertical="true"
                                android:layout_marginStart="@dimen/_10sdp"
                                android:src="@drawable/facebook" />

                            <TextView
                                android:id="@+id/fb_txt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_marginStart="10dp"
                                android:layout_toEndOf="@+id/fb_icn"
                                android:text="Facebook"
                                android:textColor="@color/white"
                                android:textStyle="bold" />

                        </RelativeLayout>


                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="@dimen/_90sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:backgroundTint="#EA6961"
                        app:cardCornerRadius="@dimen/_25sdp"
                        app:cardElevation="0dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:id="@+id/web_icn"
                                android:layout_width="@dimen/_15sdp"
                                android:layout_height="@dimen/_15sdp"
                                android:layout_centerVertical="true"
                                android:layout_marginStart="@dimen/_10sdp"
                                android:src="@drawable/web2" />

                            <TextView
                                android:id="@+id/web_txt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_marginStart="10dp"
                                android:layout_toEndOf="@+id/web_icn"
                                android:text="Web site"
                                android:textColor="@color/white"
                                android:textStyle="bold" />

                        </RelativeLayout>


                    </com.google.android.material.card.MaterialCardView>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>